--- a/3DAPIShader/3DAPIShader.vcxproj
+++ b/3DAPIShader/3DAPIShader.vcxproj
@@ -90,7 +90,9 @@
     <ClInclude Include="GameCore.h" />
     <ClInclude Include="Grid.h" />
     <ClInclude Include="InputManager.h" />
+    <ClInclude Include="IRenderTarget.h" />
     <ClInclude Include="Mesh.h" />
+    <ClInclude Include="RenderTarget.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="Shader_3dapi_03_01.h" />
     <ClInclude Include="Shader_3dapi_03_02.h" />
@@ -113,7 +115,9 @@
     <ClCompile Include="GameCore.cpp" />
     <ClCompile Include="Grid.cpp" />
     <ClCompile Include="InputManager.cpp" />
+    <ClCompile Include="IRenderTarget.cpp" />
     <ClCompile Include="Mesh.cpp" />
+    <ClCompile Include="RenderTarget.cpp" />
     <ClCompile Include="Shader_3dapi_03_01.cpp" />
     <ClCompile Include="Shader_3dapi_03_02.cpp" />
     <ClCompile Include="Shader_3dapi_03_03.cpp" />
