--- a/ShaderBeginning/ShaderBeginning.vcxproj.filters
+++ b/ShaderBeginning/ShaderBeginning.vcxproj.filters
@@ -60,6 +60,12 @@
     <ClInclude Include="Ex08_EnvironmentMapping.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Ex09_UVAnimation.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Ex10_ShadowMapping.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -96,6 +102,12 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="Ex08_EnvironmentMapping.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Ex09_UVAnimation.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Ex10_ShadowMapping.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
