--- a/3DAPIBasic/3DAPIBasic.vcxproj.filters
+++ b/3DAPIBasic/3DAPIBasic.vcxproj.filters
@@ -25,6 +25,12 @@
     <Filter Include="헤더 파일\Chapter08">
       <UniqueIdentifier>{07aebd78-af9c-4f2e-8c04-9bd97d7ed175}</UniqueIdentifier>
     </Filter>
+    <Filter Include="소스 파일\Surface">
+      <UniqueIdentifier>{9af5c270-3b0a-4bc0-8a5a-96feda693741}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="헤더 파일\Surface">
+      <UniqueIdentifier>{aa7255ac-eb7a-40ed-9a90-c44bf5889c40}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <Text Include="ReadMe.txt" />
@@ -76,7 +82,16 @@
       <Filter>헤더 파일\Chapter08</Filter>
     </ClInclude>
     <ClInclude Include="Basic_3dapi_08_03.h">
-      <Filter>헤더 파일</Filter>
+      <Filter>헤더 파일\Chapter08</Filter>
+    </ClInclude>
+    <ClInclude Include="Basic_3dapi_08_04.h">
+      <Filter>헤더 파일\Chapter08</Filter>
+    </ClInclude>
+    <ClInclude Include="Surface_3dapi_01.h">
+      <Filter>헤더 파일\Surface</Filter>
+    </ClInclude>
+    <ClInclude Include="Surface_3dapi_02.h">
+      <Filter>헤더 파일\Surface</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -121,6 +136,15 @@
     </ClCompile>
     <ClCompile Include="Basic_3dapi_08_03.cpp">
       <Filter>소스 파일\Chapter08</Filter>
+    </ClCompile>
+    <ClCompile Include="Basic_3dapi_08_04.cpp">
+      <Filter>소스 파일\Chapter08</Filter>
+    </ClCompile>
+    <ClCompile Include="Surface_3dapi_01.cpp">
+      <Filter>소스 파일\Surface</Filter>
+    </ClCompile>
+    <ClCompile Include="Surface_3dapi_02.cpp">
+      <Filter>소스 파일\Surface</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
