--- a/ShaderBeginning/ShaderBeginning.vcxproj
+++ b/ShaderBeginning/ShaderBeginning.vcxproj
@@ -94,6 +94,7 @@
     <ClInclude Include="Ex09_UVAnimation.h" />
     <ClInclude Include="Ex10_ShadowMapping.h" />
     <ClInclude Include="Ex11_ColorConversion.h" />
+    <ClInclude Include="Ex12_EdgeDetection.h" />
     <ClInclude Include="GameApp.h" />
     <ClInclude Include="GameCore.h" />
     <ClInclude Include="Resource.h" />
@@ -113,6 +114,7 @@
     <ClCompile Include="Ex09_UVAnimation.cpp" />
     <ClCompile Include="Ex10_ShadowMapping.cpp" />
     <ClCompile Include="Ex11_ColorConversion.cpp" />
+    <ClCompile Include="Ex12_EdgeDetection.cpp" />
     <ClCompile Include="GameApp.cpp" />
     <ClCompile Include="GameCore.cpp" />
     <ClCompile Include="ShaderBeginning.cpp" />
