--- a/ShaderBeginning/ShaderBeginning.vcxproj.filters
+++ b/ShaderBeginning/ShaderBeginning.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClInclude Include="Ex11_ColorConversion.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Ex12_EdgeDetection.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -114,6 +117,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="Ex11_ColorConversion.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Ex12_EdgeDetection.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
