--- a/3DAPIShader/3DAPIShader.vcxproj
+++ b/3DAPIShader/3DAPIShader.vcxproj
@@ -99,6 +99,13 @@
     <ClInclude Include="Shader_3dapi_02_19.h" />
     <ClInclude Include="Shader_3dapi_02_20.h" />
     <ClInclude Include="Shader_3dapi_02_21.h" />
+    <ClInclude Include="Shader_3dapi_02_22.h" />
+    <ClInclude Include="Shader_3dapi_02_23.h" />
+    <ClInclude Include="Shader_3dapi_02_24.h" />
+    <ClInclude Include="Shader_3dapi_02_25.h" />
+    <ClInclude Include="Shader_3dapi_02_26.h" />
+    <ClInclude Include="Shader_3dapi_02_27.h" />
+    <ClInclude Include="Shader_3dapi_02_28.h" />
     <ClInclude Include="Shader_3dapi_03_01.h" />
     <ClInclude Include="Shader_3dapi_03_02.h" />
     <ClInclude Include="Shader_3dapi_03_03.h" />
@@ -128,6 +135,13 @@
     <ClCompile Include="Shader_3dapi_02_19.cpp" />
     <ClCompile Include="Shader_3dapi_02_20.cpp" />
     <ClCompile Include="Shader_3dapi_02_21.cpp" />
+    <ClCompile Include="Shader_3dapi_02_22.cpp" />
+    <ClCompile Include="Shader_3dapi_02_23.cpp" />
+    <ClCompile Include="Shader_3dapi_02_24.cpp" />
+    <ClCompile Include="Shader_3dapi_02_25.cpp" />
+    <ClCompile Include="Shader_3dapi_02_26.cpp" />
+    <ClCompile Include="Shader_3dapi_02_27.cpp" />
+    <ClCompile Include="Shader_3dapi_02_28.cpp" />
     <ClCompile Include="Shader_3dapi_03_01.cpp" />
     <ClCompile Include="Shader_3dapi_03_02.cpp" />
     <ClCompile Include="Shader_3dapi_03_03.cpp" />
