--- a/3DAPIBasic/3DAPIBasic.vcxproj
+++ b/3DAPIBasic/3DAPIBasic.vcxproj
@@ -95,6 +95,8 @@
     <ClInclude Include="Basic_3dapi_08_02.h" />
     <ClInclude Include="Basic_3dapi_08_03.h" />
     <ClInclude Include="Basic_3dapi_08_04.h" />
+    <ClInclude Include="Basic_3dapi_08_05.h" />
+    <ClInclude Include="Basic_3dapi_08_06.h" />
     <ClInclude Include="GameApp.h" />
     <ClInclude Include="GameCore.h" />
     <ClInclude Include="Resource.h" />
@@ -116,6 +118,8 @@
     <ClCompile Include="Basic_3dapi_08_02.cpp" />
     <ClCompile Include="Basic_3dapi_08_03.cpp" />
     <ClCompile Include="Basic_3dapi_08_04.cpp" />
+    <ClCompile Include="Basic_3dapi_08_05.cpp" />
+    <ClCompile Include="Basic_3dapi_08_06.cpp" />
     <ClCompile Include="GameApp.cpp" />
     <ClCompile Include="GameCore.cpp" />
     <ClCompile Include="stdafx.cpp">
