--- a/3DAPIShader/3DAPIShader.vcxproj
+++ b/3DAPIShader/3DAPIShader.vcxproj
@@ -115,6 +115,9 @@
     <ClInclude Include="Shader_3dapi_03_10.h" />
     <ClInclude Include="Shader_3dapi_03_11.h" />
     <ClInclude Include="Shader_3dapi_02_12.h" />
+    <ClInclude Include="Shader_3dapi_03_12.h" />
+    <ClInclude Include="Shader_3dapi_03_14.h" />
+    <ClInclude Include="Sprite.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="TestShader.h" />
@@ -151,6 +154,9 @@
     <ClCompile Include="Shader_3dapi_03_10.cpp" />
     <ClCompile Include="Shader_3dapi_03_11.cpp" />
     <ClCompile Include="Shader_3dapi_02_12.cpp" />
+    <ClCompile Include="Shader_3dapi_03_12.cpp" />
+    <ClCompile Include="Shader_3dapi_03_14.cpp" />
+    <ClCompile Include="Sprite.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
